Subtil skugga på bilder, header-meny fixad,  spacing på botten av sidor

--- a/wwwroot/css/footer.css
+++ b/wwwroot/css/footer.css
@@ -1,5 +1,5 @@
 ﻿footer {
-    margin-top: 5rem;
+    margin-top: 4rem;
     padding-top: 60px;
     padding-bottom: 60px;
 }
